# factor-stat-arb

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  symbols.txt
.streamlit/: config.toml
config/: analysis_prefs.json  logging.yaml  pairs.yaml  scanner_prefs.json  strategies.yaml
deployment/: env.example
docs/: .gitignore  404.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_REVIEW.md  Gemfile  PERFORMANCE.md  PROJECT_SPEC.md  SECURITY.md  _config.yml  getting-started.md  index.md  methodology.md  streamlit-ui-utilities.md  troubleshooting.md
examples/: database_usage.py  historical_data_loader_usage.py  load_key_statistics.py  timezone_usage.py  yahoo_data_attributes_demo.py  yahoo_load_specific_attributes.py  yahoo_loader_usage.py  yahoo_officers_loader_usage.py
scripts/: 01_create_databases.sql  02_create_core_tables.sql  03_create_indexes.sql  04_verify_setup.sql  05_create_symbol_tables.sql  06_create_load_runs_table.sql  07_add_data_source_to_market_data.sql  08_create_company_info_table.sql  09_create_key_statistics_table.sql  10_create_institutional_holders_table.sql  11_create_financial_statements_table.sql  11b_add_institutional_holders_latest_flag.sql  12_create_company_officers_table.sql  13_add_financial_metrics_columns.sql  13b_create_dividends_table.sql  14_create_stock_splits_table.sql  15_create_analyst_recommendations_table.sql  16_create_esg_scores_table.sql  17_create_technical_indicators_tables.sql  18_update_symbols_from_company_info.sql  19_add_market_cap_to_symbols.sql  check_env.py  (+36 more)
(+201 files in other folders)
