[project]
name = "factor-stat-arb"
version = "0.1.0"
description = "Explainable factor residual statistical arbitrage"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "lightgbm>=4.3",
    "shap>=0.46",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alpaca-py>=0.33",
    "prefect>=3.0",
    "streamlit>=1.38",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "yfinance>=0.2",
    # Inherited from the trading-system code copied into this repo (see reuse table).
    "loguru>=0.7",          # logging backbone, imported across ~40 modules
    "pyyaml>=6.0",          # config/*.yaml loading
    "plotly>=5.24",         # streamlit_ui charts
    "pandas-ta-classic>=0.3",  # analytics technical indicators
    "psutil>=6.0",          # system/ops monitoring
    "redis>=5.0",           # caching layer
    "requests>=2.32",       # explicit HTTP use in reused services
    "ollama>=0.3",          # src/services/agent ops-monitor (optional; prune if unused)
    "streamlit-aggrid>=1.0",
    "streamlit-lightweight-charts>=0.7",
]

[tool.uv]
environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
